# nft-burn-reward-sc

./: README.md
burn_reward/: Anchor.toml  package.json
burn_reward/cli/: burn_reward.ts  script.ts  types.ts
burn_reward/programs/burn_reward/: Cargo.toml
burn_reward/programs/burn_reward/src/: account.rs  constants.rs  error.rs  lib.rs
burn_reward/tests/: burn_reward.ts
